--- a/ProjectAries/Views/Shared/_Layout.cshtml
+++ b/ProjectAries/Views/Shared/_Layout.cshtml
@@ -19,14 +19,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ProjectAries</a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="navbar-collapse collapse" id="Navber">
             <ul class="nav navbar-nav mr-auto">
                 <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a></li>
-                <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a></li>
-                <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a></li>
+                <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">システムについて</a></li>
+                <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="Contact" class="nav-link">問合せ</a></li>
             </ul>
             <partial name="_LoginPartial" />
         </div>
